[package]
name = "set_time_out"
version = "0.1.2"
edition = "2021"
authors = ["UniCorp <lucianoricardo@unicorp.com.ar>"]
license = "MIT/Apache-2.0"
description = "Function to delay the execution of a function"
repository = "https://github.com/LucianoRicardo737/set_time_out_rust"
homepage = "https://github.com/LucianoRicardo737/set_time_out_rust"
keywords = ["set_time_out", "set_timeout", "set_timeout_rust", "set_timeout_rust_rs, setTimeOut, wait, delay"]

[dependencies]